k8s/dev/deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logmower-eventsource
  annotations:
    kubernetes.io/ingress.class: erkiaas-yeaa8
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: traefik-yeaa8.codemowers.ee
spec:
  rules:
    - host: logs-yeaa8.codemowers.ee
      http:
        paths:
          - pathType: Prefix
            path: "/events"
            backend:
              service:
                name: logmower-eventsource
                port:
                  number: 3002
  tls:
    - hosts:
        - "*.codemowers.ee"
---
apiVersion: v1
kind: Service
metadata:
  name: logmower-eventsource
spec:
  type: ClusterIP
  selector:
    app: logmower-eventsource
  ports:
    - protocol: TCP
      port: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logmower-eventsource
spec:
  selector:
    matchLabels:
      app: logmower-eventsource
  template:
    metadata:
      labels:
        app: logmower-eventsource
    spec:
      containers:
        - name: logmower-eventsource
          image: harbor.codemowers.eu/eaas/logmower-eventsource
          ports:
            - containerPort: 3002
