k8s/dev/mongodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
        - name: mongoexpress
          image: mongo-express
          ports:
            - name: mongoexpress
              containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress
  labels:
    app: mongoexpress
spec:
  selector:
    app: mongoexpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: traefik-yeaa8.codemowers.ee
spec:
  rules:
    - host: mongoexpress-yeaa8.codemowers.ee
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongoexpress
                port:
                  number: 80
  tls:
    - hosts:
        - "*.codemowers.ee"
